<resources>
    <string name="app_name">SAFE</string>
    <string name="distance_label">distance: </string>
    <string name="default_distance_measurement">no measurements</string>
    <string name="time_label">timestamp: </string>
    <string name="default_time_stamp">no timestamps</string>
    <string name="NightPicText">Database Picture</string>

    <string name="title_activity_firebase_auth">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="dialog_scan_for_device">Scanning For Device</string>
    <string name="scan">scan</string>
    <string name="cancel">cancel</string>
    <string name="accept_device">accept</string>
    <string name="decline_device">decline</string>


    <string name="device_icon">Device Default Icon</string>
    <string name="default_device_text">Default Device Text</string>
    <string name="default_device_hash_text">D3FaUltDeV1c3H4sh</string>
    <string name="add_device">Add new device</string>
    <string name="scanning_for_devices">Scanning for Devices</string>

    <string name="default_email">email</string>
    <string name="default_password">password</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>

</resources>
