<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/device_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/device_icon" />

    <TextView
        android:id="@+id/device_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/device_image"
        android:text="@string/default_device_text"
        android:textColor="#000" />

    <TextView
        android:id="@+id/device_hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/device_text"
        android:text="@string/default_device_hash_text"
        android:textColor="#000" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/listDivider" />

</RelativeLayout>